# rusticua

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: default_issue.md
src/: app.rs  components.rs  game.rs  layout.rs  main.rs  pages.rs  routes.rs
src/components/: mod.rs  topbar.rs
static/data/: ua_alphabet.json
static/www/: index.html
static/www/css/: style.css
